--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: grey;
+    background: #1eb286
   }
   
    
@@ -16,14 +16,14 @@ body {
     display: flex;
     height: 80px;
     width: 100%;
-    background: #6d7878;
+    background: #06d5a1;
     align-items: center;
     justify-content: space-between;
     padding: 0 50px 0 100px;
     flex-wrap: wrap;
   }
   nav .logo{
-    color: rgb(0, 0, 0);
+    color: #fff;
     font-size: 35px;
     font-weight: 600;
   }
@@ -36,7 +36,7 @@ body {
     margin: 0 5px;
   }
   nav ul li a{
-    color: #000000;
+    color: #f2f2f2;
     text-decoration: none;
     font-size: 18px;
     font-weight: 500;
@@ -51,7 +51,7 @@ body {
     background: #fff;
   }
   nav .menu-btn i{
-    color: rgb(0, 221, 255);
+    color: #fff;
     font-size: 22px;
     cursor: pointer;
     display: none;
@@ -102,7 +102,7 @@ body {
     nav ul li a.active,
     nav ul li a:hover{
       background: none;
-      color: rgb(0, 255, 255);
+      color: cyan;
     }
   }
   .content{
@@ -139,7 +139,267 @@ body {
     display: flex;
     justify-content: center;
     width: 100%;
-    background-color: rgb(168, 162, 162);
+    background-color: #06d5a1;
     height: 9vh;
     padding-top: 18px;
-  } 
+  }
+  
+   
+  
+  .container {
+    position: absolute;
+    height: 60%;
+    width: 100%;
+    top: 22%;
+  }
+  
+   
+  
+  #foto {
+    position: center;
+    height: 40rem;
+    top: 20%;
+    left: 8%;
+  }
+  #codee {
+    position: center;
+    height: 15rem;
+    top: 15%;
+    left: 8%;
+  }
+  #rdr2{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+  }
+  :root {
+
+    --color-primary: #44be67;
+  
+    --color-white: #ffffff;
+  
+    --color-black: #141d28;
+  
+    --color-black-1: #212b38;
+  
+  }
+  
+  
+  
+  * {
+  
+    margin: 0;
+  
+    padding: 0;
+  
+    box-sizing: border-box;
+  
+  }
+  
+  
+  
+  body {
+  
+    font-family: sans-serif;
+  
+   background-color: gray;
+  
+  }
+  
+  
+  
+  .logo {
+  
+    color: var(--color-white);
+  
+    font-size: 30px;
+  
+  }
+  
+  
+  
+  .logo span {
+  
+    color: var(--color-primary);
+  
+  }
+  
+  
+  
+  .menu-bar {
+  
+    background-color: var(--color-black);
+  
+    height: 80px;
+  
+    width: 100%;
+  
+    display: flex;
+  
+    justify-content: space-between;
+  
+    align-items: center;
+  
+    padding: 0 5%;
+  
+  
+  
+    position: relative  ;
+  
+  }
+  
+  
+  
+  .menu-bar ul {
+  
+    list-style: none;
+  
+    display: flex;
+  
+  }
+  
+  
+  
+  .menu-bar ul li {
+  
+    /* width: 120px; */
+  
+    padding: 10px 30px;
+  
+    /* text-align: center; */
+  
+  
+  
+    position: relative;
+  
+  }
+  
+  
+  
+  .menu-bar ul li a {
+  
+    font-size: 20px;
+  
+    color: var(--color-white);
+  
+    text-decoration: none;
+  
+  
+  
+    transition: all 0.3s;
+  
+  }
+  
+  
+  
+  .menu-bar ul li a:hover {
+  
+    color: var(--color-primary);
+  
+  }
+  
+  
+  
+  .fas {
+  
+    float: right;
+  
+    margin-left: 10px;
+  
+    padding-top: 3px;
+  
+  }
+  
+  
+  
+  /* dropdown menu style */
+  
+  .dropdown-menu {
+  
+    display: none;
+  
+  }
+  
+  
+  
+  .menu-bar ul li:hover .dropdown-menu {
+  
+    display: block;
+  
+    position: absolute;
+  
+    left: 0;
+  
+    top: 100%;
+  
+    background-color: var(--color-black);
+  
+  }
+  
+  
+  
+  .menu-bar ul li:hover .dropdown-menu ul {
+  
+    display: block;
+  
+    margin: 10px;
+  
+  }
+  
+  
+  
+  .menu-bar ul li:hover .dropdown-menu ul li {
+  
+    width: 150px;
+  
+    padding: 10px;
+  
+  }
+  
+  
+  
+  .dropdown-menu-1 {
+  
+    display: none;
+  
+  }
+  
+  
+  
+  .dropdown-menu ul li:hover .dropdown-menu-1 {
+  
+    display: block;
+  
+    position: absolute;
+  
+    left: 150px;
+  
+    top: 0;
+  
+    background-color: var(--color-black);
+  
+  }
+
+  #CR{
+    float: right;
+    margin-top: -420px;
+    margin-right: 200px;
+    width: 300px;
+    height: 300px;
+    }
+
+    #CRtekst{
+      margin-left: 900px;
+      float: right;
+      margin-top: -110px;
+    }
+
+    #nba{
+      width: 300px;
+      height: 250px;
+    }
+
+    #code{
+      margin-left: 1000px;
+      margin-top: -300px;      
+    }
